finishing API for weight
