# weight/main.go
@@ -4,11 +4,13 @@ import (
 	"net/http"
 	"os"
 	configs "project/app/configs"
+	variables "project/app/variables"
 	"project/docs"
 	"strings"
 
 	"github.com/gin-gonic/gin"
 
+	controllers "project/app/controllers"
 	middlewares "project/app/middlewares"
 
 	_ "project/docs"
@@ -17,15 +19,15 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-// @title Shipping Yard
+// @title Weight
 // @version 1.0
-// @description Example API for Shipping Yard
+// @description Example API for Weight
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 func main() {
 	// gin.SetMode(gin.ReleaseMode)
-	docs.SwaggerInfo.Title = "Shipping Yard"
-	docs.SwaggerInfo.Description = "Example API for Shipping Yard"
+	docs.SwaggerInfo.Title = "Weight"
+	docs.SwaggerInfo.Description = "Example API for Weight"
 	docs.SwaggerInfo.Version = "1.0"
 	docs.SwaggerInfo.Host = configs.Env.SwaggerURL
 
@@ -44,9 +46,15 @@ func main() {
 		)
 
 	})
-
 	if strings.ToUpper(configs.Env.SwaggerAllow) == "TRUE" {
 		r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	}
+	v1 := r.Group(variables.API_VERSION)
+	{
+		v1weight := v1.Group(variables.WEIGHT)
+		v1weight.GET("/", middlewares.GetWeight, controllers.GetWeight)
+		v1weight.POST("/", middlewares.AddWeight, controllers.AddWeight)
+		v1weight.PUT("/:weightRecordId", middlewares.UpdateWeight, controllers.UpdateWeight)
 	}
 
 	r.Run(":" + configs.Env.AppPort)
